tests/ui-msrv/transmute-ref-src-not-a-reference.stderr
error[E0614]: type `usize` cannot be dereferenced
  --> tests/ui-msrv/transmute-ref-src-not-a-reference.rs:13:34
   |
13 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(0usize);
   |                                  ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
